--- a/data/index.html
+++ b/data/index.html
@@ -74,14 +74,15 @@
       <!-- Buttons -->
       <div class="container theme-showcase" role="main">
       <!-- <div class="row"> -->
-        <div id="buttons" class="float-right">
+        <div id="buttons" class="float-right" style="margin-bottom: 20px; float: right;">
         <!-- <div id="buttons" body class="panel-body"> -->
           <button type="button" id="SaveConfig" value="SaveConfig" class="btn btn-primary">Save</button>
           <button type="button" id="Restart" value="Restart" class="btn btn-success">Save & restart</button>
 
           <button type="button" id="LoadConfig" value="LoadConfig" class="btn btn-warning">Load configs</button>
           <button type="button" id="Factory" value="Factory" class="btn btn-danger">Factory defaults</button>
-          <button type="button" id="gpio_test" value="gpio_test" class="btn btn-info">GPIO test</button>
+          <!-- <button type="button" id="gpio_test" value="gpio_test" class="btn btn-outline-info">GPIO test</button> -->
+          <button type="button" id="gpio_test" value="gpio_test" class="btn btn-info" style="margin-left:50px">GPIO test</button>
         </div>
       </div>
 
