--- a/data/index.html
+++ b/data/index.html
@@ -15,10 +15,9 @@
     <link href="css/style.css" rel="stylesheet"> -->
 
     <!-- Bootstrap 3.0 -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
     <!-- Bootstrap 4.0 -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -27,11 +26,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 
     <!-- Locally stored -->
-    <!-- <script src="js/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script> -->
 
+    <!-- <script src="php/save_config.php"></script>
+    <script src="php/restore_backup.php"></script> -->
     <script type="text/javascript" src="config.json"></script>
+
 
   </head>
   <body role="document" data-gr-c-s-loaded="true" style>
@@ -82,7 +84,7 @@
           <button type="button" id="LoadConfig" value="LoadConfig" class="btn btn-warning">Load configs</button>
           <button type="button" id="Factory" value="Factory" class="btn btn-danger">Factory defaults</button>
           <!-- <button type="button" id="gpio_test" value="gpio_test" class="btn btn-outline-info">GPIO test</button> -->
-          <button type="button" id="gpio_test" value="gpio_test" class="btn btn-info" style="margin-left:50px">GPIO test</button>
+          <button type="button" id="gpio_test" value="gpio_test" class="btn btn-info" style="margin-left:50px">GPIO LED test</button>
         </div>
       </div>
 
@@ -125,7 +127,7 @@
 
     var config;
 
-    $(loadConfig());
+    $(loadConfig(config));
 
 
 
@@ -139,11 +141,12 @@
     document.getElementById("SaveConfig").onclick = function SaveConfig() {
       //submitForms(config);
       console.log("SaveConfig");
-      console.log(config);
+      //console.log(config);
 
       var config_reloaded = formToConfig(config);
-      console.log(config_reloaded);
+
       storeJson(config_reloaded);
+      //console.log(config_reloaded);
     };
     document.getElementById("Restart").onclick = function Restart() {
       console.log("Restart");
@@ -182,10 +185,12 @@
 
 
 
-    function loadConfig() {
+    function loadConfig(data) {
        //var config = [];
        $.getJSON('config.json', function(data) {
-         config = data;
+
+         // window.config is the global object config
+         window.config = data;
          //   $.each(data.person, function(i, f) {
          //      var tblRow = "<tr>" + "<td>" + f.firstName + "</td>" +
          //       "<td>" + f.lastName + "</td>" + "<td>" + f.job + "</td>" + "<td>" + f.roll + "</td>" + "</tr>"
@@ -194,14 +199,14 @@
 
 
          //config = config[0];
-         console.log(config);
+         console.log(window.config);
          // console.log(config["network"]);
          // console.log(config.network);
          // console.log(config.mqtt.server);
 
          var id_name
          var form= document.getElementById("form");
-         for (var tab in config){
+         for (var tab in window.config){
 
            id_name = tab;
            form.innerHTML += "<div id=\"" + id_name + "\" class=\"panel panel-default\">"
@@ -212,7 +217,7 @@
            formpanel.innerHTML += "<div id=\"" + id_name + "\" class=\"panel-body\">"
 
            var formbody= document.getElementById(id_name);
-           for(var key in config[tab]){
+           for(var key in window.config[tab]){
 
              id_name = tab + "_" + key + "_form";
              formbody.innerHTML += "<div id=\"" + id_name + "\" class=\"form-group\">"
@@ -225,7 +230,7 @@
 
 
              //Filter here the type of value
-             var val = config[tab][key];
+             var val = window.config[tab][key];
 
              // Boolean configurations:
             if (typeof val === 'boolean' || val == "true" || val == "false") {
@@ -318,7 +323,7 @@
           type: "GET",
           dataType : 'json',
           async: false,
-          url: '/data/restore_backup.php',
+          url: '/php/restore_backup.php',
           //data: { data: JSON.stringify(config) },
           data: {},
           success: function () {alert("Thanks!"); },
@@ -327,15 +332,19 @@
     };
 
     function storeJson(config){
+      console.log("Storing the data...");
+      console.log(config);
       $.ajax({
           type: "GET",
           dataType : 'json',
-          async: false,
-          url: '/data/save_config.php',
+          url: '/php/save_config.php',
+          async: true,
           data: { data: JSON.stringify(config) },
+          //data: `{ "data": JSON.stringify(window.config) }`,
           success: function () {alert("Thanks!"); },
           failure: function() {alert("Error!");}
       });
+      console.log("data stored");
     };
 
 
@@ -365,9 +374,11 @@
 
     function setGPIO(id, val) {
 
-      //setBouton('D8','0');
       $.post("gpio?id=" + id + "&val=" + val).done(function(data){
         console.log("Returned POST req: " + JSON.stringify(data));
+
+        // Data returned: data
+
         var id_gpio = "#" + id + "_val";
         //console.log(id_gpio);
         // if ( data.success === "1" ) {
