removed typo on html

--- a/data/index.html
+++ b/data/index.html
@@ -274,7 +274,7 @@
 
               // If the object its a password, we hide the value:
               if (key.includes("password")){
-                formimput.innerHTML += "<input id=\""+key+"\" name=\""+key+"\" type=\"password\" placeholder=\"Password\" class=\"form-control input-md\" value=" + val + "required>"
+                formimput.innerHTML += "<input id=\""+key+"\" name=\""+key+"\" type=\"password\" placeholder=\"Password\" class=\"form-control input-md\" value=" + val + ">"
                 // formimput.innerHTML += "<div class=\"invalid-tooltip\">Please choose a unique and valid username.</div>"
               }
 
